feat: favicon 적용

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width,user-scalable=no,maximum-scale=1, initial-scale=1.0" />
   <link rel="stylesheet" as="style" crossorigin
     href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable.css" />
-  <title>Vite + React + TS</title>
+  <title>ASAP, 최적의 회의시간 도출서비스</title>
 </head>
 
 <body>
