feat: 링크 이미지 공유

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <meta name="viewport" content="width=device-width,user-scalable=no,maximum-scale=1, initial-scale=1.0" />
   <link rel="stylesheet" as="style" crossorigin
     href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable.css" />
+     <!-- OpenGraph 설정 -->
+  <meta property="og:title" content="모든 회의의 시작, ASAP" />
+  <meta property="og:description" content="ASAP 최적의 회의시간을 도출하세요" />
+  <meta property="og:image" content="https://github.com/ASAP-as-soon-as-possible/ASAP_Client/assets/91375979/8a4ec3f0-ce85-4a3e-844a-d21391c4c6ec">
   <title>ASAP, 최적의 회의시간 도출서비스</title>
 </head>
 
