--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <meta property="og:description" content="ASAP 최적의 회의시간을 도출하세요" />
   <meta property="og:image" content="https://github.com/ASAP-as-soon-as-possible/ASAP_Client/assets/91375979/8a4ec3f0-ce85-4a3e-844a-d21391c4c6ec">
   <meta name="naver-site-verification" content="6b03e31b9187ec727bf2fe5c82eb98eaa6a05ce5" />
-  <title>ASAP, 최적의 회의시간 도출서비스</title>
+  <title>ASAP</title>
+  <meta name="description" content="최적의 회의시간을 도출하세요.">
 </head>
 
 <body>
